--- a/ML/Pipeline.ipynb
+++ b/ML/Pipeline.ipynb
@@ -2,28 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "check1\n",
-      "[0. 0. 0. ... 0. 0. 0.]\n",
-      "The Neural Network accuracy is 91.56626506024097\n",
-      "The Neural Network Confusion Matrix is:\n",
-      "[[253  14]\n",
-      " [ 21 127]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler, FunctionTransformer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.experimental import enable_iterative_imputer\n",
+    "from sklearn.impute import IterativeImputer\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "import wandb\n",
     "from wandb.sklearn import plot_precision_recall, plot_feature_importances\n",
@@ -31,8 +20,247 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from IMPJ import DataProcessor\n",
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Signif_Avg', 'Pivot_Energy', 'Flux1000', 'Energy_Flux100',\n",
+      "       'PL_Flux_Density', 'PL_Index', 'LP_Flux_Density', 'LP_Index', 'LP_beta',\n",
+      "       'LP_SigCurv', 'LP_EPeak', 'PLEC_Flux_Density', 'PLEC_IndexS',\n",
+      "       'PLEC_ExpfactorS', 'PLEC_Exp_Index', 'PLEC_SigCurv', 'Npred',\n",
+      "       'Variability_Index', 'Frac_Variability', 'ASSOC_PROB_BAY',\n",
+      "       'ASSOC_PROB_LR', 'Flux_Band_0', 'Flux_Band_1', 'Flux_Band_2',\n",
+      "       'Flux_Band_3', 'Flux_Band_4', 'Flux_Band_5', 'Flux_Band_6',\n",
+      "       'Flux_Band_7', 'nuFnu_Band_0', 'nuFnu_Band_1', 'nuFnu_Band_2',\n",
+      "       'nuFnu_Band_3', 'nuFnu_Band_4', 'nuFnu_Band_5', 'nuFnu_Band_6',\n",
+      "       'nuFnu_Band_7', 'Sqrt_TS_Band_2', 'Sqrt_TS_Band_3', 'Sqrt_TS_Band_4',\n",
+      "       'Sqrt_TS_Band_5', 'Flux_History_0', 'Flux_History_1', 'Flux_History_2',\n",
+      "       'Flux_History_3', 'Flux_History_4', 'Flux_History_5', 'Flux_History_6',\n",
+      "       'Flux_History_7', 'Sqrt_TS_History_0', 'Sqrt_TS_History_1',\n",
+      "       'Sqrt_TS_History_2', 'Sqrt_TS_History_3', 'Sqrt_TS_History_4',\n",
+      "       'Sqrt_TS_History_5', 'Sqrt_TS_History_6', 'Sqrt_TS_History_7',\n",
+      "       'CLASS1'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "data = pd.read_csv('..\\\\Fermi-LAT Data\\\\fl_numericalonly_nopositional_withclasses.csv', index_col=0)\n",
+    "print(data.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2858. 4128. 2046. 4374.   79.]\n",
+      "       LP_EPeak\n",
+      "2858  107.65714\n",
+      "       LP_EPeak\n",
+      "4128  479.67627\n",
+      "      LP_EPeak\n",
+      "2046  739.2725\n",
+      "       LP_EPeak\n",
+      "4374  3147.1711\n",
+      "      LP_EPeak\n",
+      "79  116.090836\n",
+      "      LP_EPeak\n",
+      "2858       NaN\n",
+      "      LP_EPeak\n",
+      "4128       NaN\n",
+      "      LP_EPeak\n",
+      "2046       NaN\n",
+      "      LP_EPeak\n",
+      "4374       NaN\n",
+      "    LP_EPeak\n",
+      "79       NaN\n",
+      "           LP_EPeak\n",
+      "2858 -351780.567971\n",
+      "           LP_EPeak\n",
+      "4128 -256510.602707\n",
+      "           LP_EPeak\n",
+      "2046 -141007.718379\n",
+      "           LP_EPeak\n",
+      "4374  308341.855385\n",
+      "        LP_EPeak\n",
+      "79  25984.183597\n",
+      "v1\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "col = 'LP_EPeak'\n",
+    "indices = data.index.values.tolist()\n",
+    "\n",
+    "num = 5\n",
+    "\n",
+    "values = np.zeros(num)\n",
+    "for i in range(0,num):\n",
+    "    values[i] = random.choice(indices)\n",
+    "print(values)\n",
+    "dp = DataProcessor()\n",
+    "data = dp.multipleimputation(data,col,values)\n",
+    "data.to_csv('mi_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4937467\n",
+      "0.39346272\n",
+      "0.0\n",
+      "0.0\n",
+      "0.46610963\n",
+      "0.45205808\n",
+      "0.0\n",
+      "0.0\n",
+      "0.295758\n",
+      "0.6221481\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n",
+      "nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_7312\\4217578786.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_copy[col][x]=np.nan\n",
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_7312\\4217578786.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_copy[col][x]=np.nan\n",
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_7312\\4217578786.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_copy[col][x]=np.nan\n",
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_7312\\4217578786.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_copy[col][x]=np.nan\n",
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_7312\\4217578786.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_copy[col][x]=np.nan\n",
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_7312\\4217578786.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_copy[col][x]=np.nan\n",
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_7312\\4217578786.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_copy[col][x]=np.nan\n",
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_7312\\4217578786.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_copy[col][x]=np.nan\n",
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_7312\\4217578786.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_copy[col][x]=np.nan\n",
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_7312\\4217578786.py:10: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_copy[col][x]=np.nan\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4372166341666917\n",
+      "0.30185564371323986\n",
+      "0.06750486292581154\n",
+      "0.40121582092105046\n",
+      "0.1765568724014954\n",
+      "0.12043303365135974\n",
+      "0.08493155717259843\n",
+      "0.06574432251433598\n",
+      "0.28002073299095576\n",
+      "0.4163705125799932\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "data = pd.read_csv('..\\\\Fermi-LAT Data\\\\fl_numericalonly_nopositional_withclasses.csv', index_col=0)\n",
+    "\n",
+    "\n",
+    "# Imputation\n",
+    "data_copy = data.copy()\n",
+    "#REMOVE THIS LINE\n",
+    "\n",
+    "for x in values:\n",
+    "    print(data_copy[col][x])\n",
+    "    data_copy[col][x]=np.nan\n",
+    "for x in values:\n",
+    "    print(data_copy[col][x])\n",
+    "\n",
+    "missing_mask = ~data_copy.isna()\n",
+    "\n",
+    "imputer = IterativeImputer(max_iter=1000,random_state=23)\n",
+    "imputed_values = imputer.fit_transform(data_copy)\n",
+    "\n",
+    "data_copy = data_copy.where(missing_mask,imputed_values)\n",
+    "\n",
+    "for x in values:\n",
+    "    print(data_copy[col][x])\n",
+    "\n",
+    "\n",
+    "data = data_copy\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Creating test and train data and Classifiers \n",
     "\n",
     "test_size = 0.3\n",
     "\n",
@@ -44,7 +272,9 @@
     "NN = MLPClassifier(activation='relu', alpha= 0.0001, hidden_layer_sizes=(30,20,10), learning_rate='constant', solver='sgd', random_state=1, max_iter=10000)\n",
     "BNN = BaggingClassifier(estimator=NN,n_estimators=10,bootstrap=True)\n",
     "\n",
+    "\n",
     "# Define the pipeline\n",
+    "\n",
     "pipeline = Pipeline([\n",
     "    ('logtransform',FunctionTransformer(func=dp.logtransform)),\n",
     "    ('scaler', StandardScaler()),\n",
@@ -52,6 +282,7 @@
     "])\n",
     "\n",
     "# Fit the pipeline on the training data\n",
+    "\n",
     "pipeline.fit(x_train,y_train)\n",
     "\n",
     "y_pred = pipeline.predict(x_test)\n",
@@ -155,6 +386,8 @@
     }
    ],
    "source": [
+    "# Saving the run to WandB\n",
+    "\n",
     "BNN_params = BNN.get_params\n",
     "wandb.init(project='final-year-project', config=BNN_params)\n",
     "wandb.config.update({\"test_size\" : test_size,\n",
