--- a/Data Processing/data_processing_2.ipynb
+++ b/Data Processing/data_processing_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,16 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['PLEC_EPeak' 'Signif_Peak' 'Flux_Peak' 'Time_Peak' 'Peak_Interval'\n",
+      " 'Sqrt_TS_Band_0' 'Sqrt_TS_Band_1' 'Sqrt_TS_Band_6' 'Sqrt_TS_Band_7']\n"
+     ]
+    }
+   ],
    "source": [
     "column_list = fl.columns\n",
     "nan_count = np.zeros(len(column_list))\n",
@@ -162,7 +171,8 @@
     "\n",
     "fl_sub20 = fl.drop(columns=drop_cols)\n",
     "\n",
-    "fl = fl_sub20.dropna()"
+    "fl = fl_sub20.dropna()\n",
+    "print(drop_cols)"
    ]
   },
   {
@@ -174,7 +184,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_6392\\1425612611.py:12: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\ioanp\\AppData\\Local\\Temp\\ipykernel_14924\\1425612611.py:12: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  fl_cl = fl_cl[~mask2]\n"
      ]
     },
@@ -446,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
