--- a/ML/Pipeline.ipynb
+++ b/ML/Pipeline.ipynb
@@ -59,6 +59,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 62,
    "metadata": {},
    "outputs": [
@@ -356,7 +365,16 @@
    "cell_type": "code",
    "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "dataclassles = data.drop(columns='CLASS1')\n",
     "df_test = pd.DataFrame(x_test,columns=[dataclassles.columns])\n",
