--- a/Data Processing/make_subsets.ipynb
+++ b/Data Processing/make_subsets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2363\n",
       "Index(['CLASS1', 'Frac_Variability', 'HR_24', 'Signif_Avg', 'Pivot_Energy',\n",
       "       'HR_35', 'HR_37', 'LP_Flux_Density', 'HR_36', 'HR_47', 'HR_57',\n",
       "       'PLEC_ExpfactorS', 'HR_46', 'PL_Index', 'ASSOC_PROB_LR'],\n",
@@ -29,12 +30,13 @@
    "source": [
     "full = pd.read_csv('..\\\\Fermi-LAT Data\\\\fl_numericalonly_nopositional_withclasses.csv',index_col=0)\n",
     "ref = pd.read_csv('..\\\\Fermi-LAT Data Subsets\\\\fl_wrappered_FORREFERENCE.csv',index_col=0)\n",
+    "print(len(full))\n",
     "print(ref.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
