--- a/ML/Pipeline.ipynb
+++ b/ML/Pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,9 +14,6 @@
     "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import IterativeImputer\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, f1_score, log_loss, roc_auc_score, RocCurveDisplay, roc_curve\n",
-    "import wandb\n",
-    "from wandb.sklearn import plot_precision_recall, plot_feature_importances\n",
-    "from wandb.sklearn import plot_class_proportions, plot_learning_curve, plot_roc\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from IMPJ import DataProcessor\n",
@@ -25,6 +22,7 @@
     "from os.path import basename, exists\n",
     "import matplotlib as mpl\n",
     "import random\n",
+    "from tqdm import tqdm\n",
     "\n",
     "randomstate = random.randint(1,1000) \n",
     "\n",
@@ -41,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +57,7 @@
        "'\\nfrom sklearn.model_selection import GridSearchCV\\nfrom sklearn.model_selection import RandomizedSearchCV\\nfrom skopt import BayesSearchCV\\nhl_list = []\\nfor i in range(1,100):\\n        for k in range(1,100):\\n               \\n                hl_list.append((i,k))\\n\\nmodel_parameters = {\\n        \\'hidden_layer_sizes\\':hl_list,\\n        \\'activation\\':[\\'tanh\\',\\'relu\\'],\\n        \\'solver\\':[\\'lbfgs\\',\\'sgd\\',\\'adam\\'],\\n        \\'learning_rate\\':[\\'constant\\',\\'invscaling\\',\\'adaptive\\']\\n}\\nNN = MLPClassifier(random_state=1)\\nclf = RandomizedSearchCV(NN, model_parameters, n_jobs=-1, cv=20,scoring=\\'roc_auc\\')\\nclf.fit(x_train, y_train)\\n#NN = MLPClassifier(activation=\\'relu\\', alpha= 0.0001, hidden_layer_sizes=(30,20,10), learning_rate=\\'constant\\', solver=\\'sgd\\', random_state=1, max_iter=10000)\\n\\n# All results\\n#means = clf.cv_results_[\\'mean_test_score\\']\\n#stds = clf.cv_results_[\\'std_test_score\\']\\n#for mean, std, params in zip(means, stds, clf.cv_results_[\\'params\\']):\\n#    print(\"%0.3f (+/-%0.03f) for %r\" % (mean, std * 2, params))\\n\\nprint(\\'Best parameters found:\\n\\', clf.best_params_ )\\nprint(\\'Best Score (ROC-AUC) was: \\n\\', clf.best_score_)'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,102 +103,33 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [04:24<00:00, 26.49s/it]\n"
+      "100%|██████████| 1/1 [01:52<00:00, 112.28s/it]"
      ]
-    }
-   ],
-   "source": [
-    "from tqdm import tqdm\n",
-    "\n",
-    "for i in tqdm(range(1,11)):\n",
-    "    \n",
-    "    test_size = 0.45\n",
-    "    \n",
-    "    n=12\n",
-    "    filepath = '..\\\\Fermi-LAT Data Subsets\\\\chiaro_12.csv'\n",
-    "    datum = pd.read_csv(filepath, index_col=0)\n",
-    "    data = pd.read_csv(filepath, index_col=0)\n",
-    "    data = data.dropna()\n",
-    "    datum = datum.dropna()\n",
-    "    X,Y = dp.choose_2_vars('CLASS1',data,1,2)\n",
-    "    x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=test_size,random_state=2*i) \n",
-    "    scaler = StandardScaler()  \n",
-    "    scaler.fit(x_train)  \n",
-    "    x_train = scaler.transform(x_train)  \n",
-    "    x_test = scaler.transform(x_test)  \n",
-    "\n",
-    "    NN = MLPClassifier(activation='tanh',hidden_layer_sizes=(50,50),learning_rate='constant',solver='sgd',max_iter=5000,random_state=5*i)\n",
-    "    BNN = BaggingClassifier(estimator=NN,n_estimators=20,bootstrap=True)\n",
-    "    BNN.fit(x_train,y_train)\n",
-    "    y_pred = BNN.predict(x_test)\n",
-    "    y_proba = BNN.predict_proba(x_test)\n",
-    "\n",
-    "\n",
-    "    ''' SCORING METRICS '''\n",
-    "\n",
-    "    accuracy = accuracy_score(y_test, y_pred)*100\n",
-    "    confusion = confusion_matrix(y_test, y_pred)\n",
-    "    roc_auc = roc_auc_score(y_test,y_pred)\n",
-    "    roc_auc_weightedavg = roc_auc_score(y_test,y_pred,average='weighted')\n",
-    "    logloss = log_loss(y_test,y_pred)\n",
-    "    f1 = f1_score(y_test,y_pred)\n",
-    "    fpr, tpr, thresholds = roc_curve(y_test,y_proba.T[1])\n",
-    "\n",
-    "    #print('The Neural Network accuracy is ' + str(accuracy))\n",
-    "    #print('The Neural Network ROC AUC Scores are: '+str(roc_auc))\n",
-    "    #print(\"The Neural Network's Weighted Average ROC AUC Score is: \" + str(roc_auc_weightedavg))\n",
-    "    #print(\"The Neural Network's Logarithmic Loss Score is: \" + str(logloss))\n",
-    "    #print('The Neural Network F1 Score is: '+str(f1))\n",
-    "    #print('The Neural Network Confusion Matrix is:')\n",
-    "    #print(confusion)\n",
-    "\n",
-    "    resultcols = ['Accuracy', 'ROC AUC', 'ROC Weighted Av', 'Logarithmic Loss', \n",
-    "            'F1 Score', 'CMatrix11','CMatrix12', 'CMatrix21', 'CMatrix22']\n",
-    "    resultarray = np.array((accuracy,roc_auc,roc_auc_weightedavg,logloss,f1,\n",
-    "                            confusion[0,0],confusion[0,1],confusion[1,0],confusion[1,1]))\n",
-    "    rocresultcols = ['FPR','TPR','Thresholds']\n",
-    "    rocresultarray = np.array([fpr,tpr,thresholds])\n",
-    "    #print(rocresultarray)\n",
-    "    results = pd.DataFrame([resultarray],columns=resultcols)\n",
-    "    rocresults = pd.DataFrame(np.array([fpr,tpr,thresholds]).transpose(),columns=rocresultcols)\n",
-    "\n",
-    "    #results.to_csv('/content/drive/My Drive/Colab Notebooks/testresults.csv')\n",
-    "    #rocresults.to_csv('/content/drive/My Drive/Colab Notebooks/testrocresults.csv')\n",
-    "    #results.to_csv('..\\\\Hyperparam_results\\\\2layer_0.csv')\n",
-    "    results.to_csv('..\\\\traintestsplitresults\\\\4555_'+str(i)+'.csv')\n",
-    "    rocresults.to_csv('..\\\\traintestsplitresults\\\\roc_4555_'+str(i)+'.csv')\n",
-    "\n",
-    "\n",
-    "\n",
-    "#mpl.rcParams['figure.dpi'] = 100\n",
-    "#fig, ax = plt.subplots(figsize=(5,5))\n",
-    "#ax.plot(fpr,tpr)\n",
-    "#ax.set_ylabel('True Positive Rate (BLL/FSRQ)')\n",
-    "#ax.set_xlabel('False Positive Rate (BLL/FSRQ)')\n",
-    "\n",
-    "#RocCurveDisplay.from_estimator(pipeline, x_test, y_test,ax=ax).figure_\n",
-    "#plt.title('The Receiver Operating Characteristic Curve for Logarithmically Scaled Data')\n",
-    "#plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Accuracy   ROC AUC  ROC Weighted Av  Logarithmic Loss  F1 Score  CMatrix11  \\\n",
+      "0  90.47619  0.901111         0.901111          3.432729   0.86747      411.0   \n",
+      "\n",
+      "   CMatrix12  CMatrix21  CMatrix22  \n",
+      "0       39.0       27.0      216.0  \n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [15:14<00:00, 91.50s/it] \n"
+      "\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "for i in tqdm(range(1,11)):\n",
+    "for i in tqdm(range(0,1)):\n",
     "    \n",
-    "    test_size = 0.35\n",
+    "    test_size = 0.3\n",
     "    \n",
     "    n=12\n",
     "    filepath = '..\\\\Fermi-LAT Data Subsets\\\\chiaro_12.csv'\n",
@@ -253,14 +182,15 @@
     "    #results.to_csv('/content/drive/My Drive/Colab Notebooks/testresults.csv')\n",
     "    #rocresults.to_csv('/content/drive/My Drive/Colab Notebooks/testrocresults.csv')\n",
     "    #results.to_csv('..\\\\Hyperparam_results\\\\2layer_0.csv')\n",
-    "    results.to_csv('..\\\\traintestsplitresults\\\\3565_'+str(i)+'.csv')\n",
-    "    rocresults.to_csv('..\\\\traintestsplitresults\\\\roc_3565_'+str(i)+'.csv')\n",
-    "\n"
+    "    #results.to_csv('..\\\\traintestsplitresults\\\\3565_'+str(i)+'.csv')\n",
+    "    #rocresults.to_csv('..\\\\traintestsplitresults\\\\roc_3565_'+str(i)+'.csv')\n",
+    "    print(results)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
