--- a/ML/imbalanced.ipynb
+++ b/ML/imbalanced.ipynb
@@ -127,27 +127,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 3]\n"
+      "[1 1 2 2 1 1 2 1 2 1 2 1 3 2 1 2 1 1 1 1 2 1 1 1 1 3 1 1 1 1 1 1 1 2 1 1 2\n",
+      " 2 1 1 1 3 1 1 1 1 1 1 2 1 2 2 2 2 1 1 1 2 1 1 1 2 1 1 2 2 1 2 1 1 1 1 2 1\n",
+      " 1 1 1 1 2 2 1 2 1 2 2 2 1 3 1 1 1 1 1 1 1 2 2 1 1 2 2 2 2 1 2 1 2 1 1 1 1\n",
+      " 1 1 2 2 2 1 2 1 1 1 2 1 1 2 1 2 1 2 2 1 1 1 2 3 1 1 2 1 2 1 2 1 1 1 1 2 1\n",
+      " 1 2 1 1 1 1 2 1 2 1 1 2 2 1 1 2 2 2 1 1 3 1 1 3 2 1 1 1 1 1 1 1 3 3 2 2 2\n",
+      " 1 1 3 3 2 2 3 2 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 2 1 2 1 1 1 2 3 1 1 1 1 1\n",
+      " 1 1 2 2 1 1 2 1 2 2 2 1 3 1 1 2 2 3 1 1 1 2 2 1 2 1 3 2 1 1 1 1 1 1 2 1 1\n",
+      " 2 2 1 1 2 1 1 2 2 1 1 1 1 2 1 1 1 1 2 1 1 2 1 1 1 2 1 1 1 1 1 2 1 1 3 1 2\n",
+      " 1 1 2 1 3 1 1 1 2 1 1 2 1 1 1 2 2 3 1 3 1 3 1 1 2 2 1 1 1 1 1 2 1 2 1 1 1\n",
+      " 1 2 3 1 1 2 1 1 2 1 1 1 1 1 2 1 2 1 3 1 1 2 1 2 1 1 1 1 3 1 1 2 2 2 1 3 1\n",
+      " 1 1 2 1 1 2 2 1 1 1 1 2 3 2 1 2 1 1 1 1 1 1 3 1 2 1 1 1 2 1 1 1 1 2 1 2 3\n",
+      " 2 1 1 1 2 1 2 2 1 1 1 2 2 2 1 1 2 2 1 1 2 2 1 1 2 1 3 1 2 3 1 2 1 2 2 2 1\n",
+      " 2 2 1 1 1 2 1 2 1 2 2 2 1 2 2 1 1 2 2 1 1 1 3 1 2 1 3 2 3 1 1 2 1 2 2 2 1\n",
+      " 2 1 1 1 2 1 2 1 2 2 1 1 2 1 1 2 2 1 2 3 3 2 2 2 2 1 1 2 1 2 1 2 1 1 2 2 1\n",
+      " 2 1 1 2 3 1 1 1 2 1 1 2 1 2 1 2 1 1 1 1 2 1 2 2 2 2 1 1 2 2 2 1 1 2 1 1 1\n",
+      " 2 2 1 1 1 3 1 1 1 3 1 1 2 1 2 2 1 1 3 3 1 1 2 1 2 1 3 2 1 2 3 1 2 1 2 3 2\n",
+      " 1 2 3 2 1 1 2 2 2 3 2 2 3 1 1 1 1 1 1 2 2 1 1 1 1 1 1 1 1 2 1 3 2 1 2 2 1\n",
+      " 2 2 1 2 1 3 1 1 1 1 3 2 2 2 2 2 1 1 1 2 1 1 1 2 1 3 1 1 1 2 2 1 2 1 3 2 1\n",
+      " 1 2 2 2 2 1 2 1 1 1 1 2 1 2 1 1 1 1 1 1 1 1 2 1 2 2 3 1 1 2 1 1 1 2 1 1 1\n",
+      " 2 1 2 1 2]\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "print(y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "y_true and y_pred contain different number of classes 3, 2. Please provide the true labels explicitly through the labels argument. Classes found in y_true: [1 2 3]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 9\u001b[0m\n\u001b[0;32m      6\u001b[0m confusion \u001b[38;5;241m=\u001b[39m confusion_matrix(y_test, y_pred)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m#roc_auc = roc_auc_score(y_test,y_pred)\u001b[39;00m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#roc_auc_weightedavg = roc_auc_score(y_test,y_pred,average='weighted')\u001b[39;00m\n\u001b[1;32m----> 9\u001b[0m logloss \u001b[38;5;241m=\u001b[39m \u001b[43mlog_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[43my_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43my_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     10\u001b[0m f1 \u001b[38;5;241m=\u001b[39m f1_score(y_test,y_pred)\n\u001b[0;32m     11\u001b[0m fpr, tpr, thresholds \u001b[38;5;241m=\u001b[39m roc_curve(y_test,y_proba\u001b[38;5;241m.\u001b[39mT[\u001b[38;5;241m1\u001b[39m])\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\utils\\_param_validation.py:211\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    205\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    206\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[0;32m    207\u001b[0m         skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[0;32m    208\u001b[0m             prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[0;32m    209\u001b[0m         )\n\u001b[0;32m    210\u001b[0m     ):\n\u001b[1;32m--> 211\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    212\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m InvalidParameterError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m    213\u001b[0m     \u001b[38;5;66;03m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[0;32m    214\u001b[0m     \u001b[38;5;66;03m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[0;32m    215\u001b[0m     \u001b[38;5;66;03m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[0;32m    216\u001b[0m     \u001b[38;5;66;03m# message to avoid confusion.\u001b[39;00m\n\u001b[0;32m    217\u001b[0m     msg \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39msub(\n\u001b[0;32m    218\u001b[0m         \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw+ must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    219\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mparameter of \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfunc\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__qualname__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m must be\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m    220\u001b[0m         \u001b[38;5;28mstr\u001b[39m(e),\n\u001b[0;32m    221\u001b[0m     )\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\sklearn\\metrics\\_classification.py:2897\u001b[0m, in \u001b[0;36mlog_loss\u001b[1;34m(y_true, y_pred, eps, normalize, sample_weight, labels)\u001b[0m\n\u001b[0;32m   2895\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lb\u001b[38;5;241m.\u001b[39mclasses_) \u001b[38;5;241m!=\u001b[39m y_pred\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]:\n\u001b[0;32m   2896\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m labels \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 2897\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   2898\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_true and y_pred contain different number of \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2899\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclasses \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[38;5;124m. Please provide the true \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2900\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlabels explicitly through the labels argument. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2901\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mClasses found in \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2902\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124my_true: \u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\n\u001b[0;32m   2903\u001b[0m                 transformed_labels\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m], y_pred\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m], lb\u001b[38;5;241m.\u001b[39mclasses_\n\u001b[0;32m   2904\u001b[0m             )\n\u001b[0;32m   2905\u001b[0m         )\n\u001b[0;32m   2906\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   2907\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   2908\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe number of classes in labels is different \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2909\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfrom that in y_pred. Classes found in \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   2910\u001b[0m             \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlabels: \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(lb\u001b[38;5;241m.\u001b[39mclasses_)\n\u001b[0;32m   2911\u001b[0m         )\n",
-      "\u001b[1;31mValueError\u001b[0m: y_true and y_pred contain different number of classes 3, 2. Please provide the true labels explicitly through the labels argument. Classes found in y_true: [1 2 3]"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "The Neural Network accuracy is 82.06214689265536\n",
+      "[[372  31  44]\n",
+      " [ 29 207   6]\n",
+      " [ 13   4   2]]\n"
      ]
     }
    ],
@@ -160,16 +187,16 @@
     "confusion = confusion_matrix(y_test, y_pred)\n",
     "#roc_auc = roc_auc_score(y_test,y_pred) \n",
     "#roc_auc_weightedavg = roc_auc_score(y_test,y_pred,average='weighted')\n",
-    "logloss = log_loss(y_test,y_pred)\n",
-    "f1 = f1_score(y_test,y_pred)\n",
-    "fpr, tpr, thresholds = roc_curve(y_test,y_proba.T[1])\n",
+    "#logloss = log_loss(y_test,y_pred)\n",
+    "#f1 = f1_score(y_test,y_pred)\n",
+    "#fpr, tpr, thresholds = roc_curve(y_test,y_proba.T[1])\n",
     "\n",
     "print('The Neural Network accuracy is ' + str(accuracy))\n",
     "#print('The Neural Network ROC AUC Scores are: '+str(roc_auc))\n",
     "#print(\"The Neural Network's Weighted Average ROC AUC Score is: \" + str(roc_auc_weightedavg))\n",
-    "print(\"The Neural Network's Logarithmic Loss Score is: \" + str(logloss))\n",
-    "print('The Neural Network F1 Score is: '+str(f1))\n",
-    "print('The Neural Network Confusion Matrix is:')\n",
+    "#print(\"The Neural Network's Logarithmic Loss Score is: \" + str(logloss))\n",
+    "#print('The Neural Network F1 Score is: '+str(f1))\n",
+    "#print('The Neural Network Confusion Matrix is:')\n",
     "print(confusion)"
    ]
   }
