--- a/ML/imbalanced_CL.ipynb
+++ b/ML/imbalanced_CL.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 2,
       "metadata": {
         "id": "C3xcXEpyNE2W"
       },
@@ -62,25 +62,25 @@
       ],
       "metadata": {
         "id": "ly_EmtuuNKkq",
-        "outputId": "e693a986-1495-4e95-e48a-7fb9931a53a1",
+        "outputId": "39bf51cb-25d8-48ce-ceae-76331f5be73b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 7,
       "metadata": {
         "id": "s88SZaA3NE2a"
       },
@@ -88,17 +88,16 @@
       "source": [
         "test_size = 0.3\n",
         "\n",
-        "filepath = \"/content/drive/My Drive/Colab Notebooks/chiaro_12.csv\"\n",
+        "filepath = \"/content/drive/My Drive/Colab Notebooks/fl_wrappered_12.csv\"\n",
         "data = pd.read_csv(filepath, index_col=0)\n",
         "data = data.dropna()\n",
         "Y = np.array(data['CLASS1'])\n",
-        "X = np.array(data.drop(labels='CLASS1',axis=1))\n",
-        "#X,Y = dp.choose_2_vars('CLASS1',data,1,2)"
+        "X = np.array(data.drop(labels='CLASS1',axis=1))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 8,
       "metadata": {
         "id": "liRn_Ys_NE2c"
       },
@@ -117,12 +116,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 15,
       "metadata": {
         "id": "k0a2IqueNE2d",
-        "outputId": "b8f611fc-6b89-4fcc-91bb-4140593a6013",
+        "outputId": "c2a8e06e-cd23-4827-e94c-2667d26bf2ce",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 380
         }
       },
       "outputs": [
@@ -130,7 +130,22 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "10it [09:21, 56.11s/it]\n"
+            "8it [08:58, 67.36s/it]\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "Length of values (236) does not match length of index (237)",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-15-a487d7791fba>\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     41\u001b[0m         \u001b[0mtest_indices\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_indices\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 43\u001b[0;31m     \u001b[0my_test_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'iteration '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miteration\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     44\u001b[0m     \u001b[0mtest_ind_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'iteration '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miteration\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest_indices\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0mtrain_ind_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'iteration '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miteration\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrain_indices\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3948\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3949\u001b[0m             \u001b[0;31m# set column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3950\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_set_item\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3951\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3952\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_setitem_slice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mslice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_set_item\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   4141\u001b[0m         \u001b[0mensure\u001b[0m \u001b[0mhomogeneity\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4142\u001b[0m         \"\"\"\n\u001b[0;32m-> 4143\u001b[0;31m         \u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sanitize_column\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4144\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4145\u001b[0m         if (\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_sanitize_column\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m   4868\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4869\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_list_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4870\u001b[0;31m             \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrequire_length_match\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4871\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0msanitize_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_2d\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4872\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/common.py\u001b[0m in \u001b[0;36mrequire_length_match\u001b[0;34m(data, index)\u001b[0m\n\u001b[1;32m    574\u001b[0m     \"\"\"\n\u001b[1;32m    575\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 576\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m    577\u001b[0m             \u001b[0;34m\"Length of values \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    578\u001b[0m             \u001b[0;34mf\"({len(data)}) \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: Length of values (236) does not match length of index (237)"
           ]
         }
       ],
@@ -145,7 +160,8 @@
         "y_pred=pd.DataFrame()\n",
         "y_proba=pd.DataFrame()\n",
         "y_test_df=pd.DataFrame()\n",
-        "\n",
+        "test_ind_df=pd.DataFrame()\n",
+        "train_ind_df=pd.DataFrame()\n",
         "\n",
         "for train_indices, test_indices in tqdm(kf.split(X)):\n",
         "    iteration+=1\n",
@@ -153,7 +169,6 @@
         "    y_train = Y[train_indices]\n",
         "    x_test=X[test_indices]\n",
         "    y_test=Y[test_indices]\n",
-        "    y_test_df['iteration '+str(iteration)] = y_test\n",
         "    scaler.fit(x_train)\n",
         "    x_train = scaler.transform(x_train)\n",
         "    x_test = scaler.transform(x_test)\n",
@@ -165,18 +180,36 @@
         "    #print(f'Resampled dataset shape {Counter(y_train_res)}')\n",
         "    BNN.fit(x_train_res, y_train_res)\n",
         "\n",
-        "    y_pred['iteration '+str(iteration)] = BNN.predict(x_test)\n",
-        "    y_proba['class' + str(0) + ' iteration '+ str(iteration)] = BNN.predict_proba(x_test).T[0]\n",
-        "    y_proba['class'+str(1)+' iteration '+str(iteration)]= BNN.predict_proba(x_test).T[1]\n",
+        "    y_pred_vals=BNN.predict(x_test)\n",
+        "    y_proba_vals=BNN.predict_proba(x_test)\n",
+        "\n",
+        "    if len(y_test)==len(y_test_df):\n",
+        "        pass\n",
+        "    else:\n",
+        "        y_test=np.append(y_test,np.nan)\n",
+        "        y_pred_vals=np.append(y_pred_vals,np.nan)\n",
+        "        y_proba_vals=np.append(y_proba_vals,[np.nan,np.nan])\n",
+        "        train_indices=np.append(train_indices,np.nan)\n",
+        "        test_indices=np.append(test_indices,np.nan)\n",
+        "\n",
+        "    y_test_df['iteration '+str(iteration)] = y_test\n",
+        "    test_ind_df['iteration '+str(iteration)]=test_indices\n",
+        "    train_ind_df['iteration '+str(iteration)]=train_indices\n",
+        "    y_pred['iteration '+str(iteration)] = y_pred_vals\n",
+        "    y_proba['class' + str(0) + ' iteration '+ str(iteration)] = y_proba_vals.T[0]\n",
+        "    y_proba['class'+str(1)+' iteration '+str(iteration)]= y_proba_vals.T[1]\n",
+        "\n",
         "#BNN.fit(x_train_res,y_train_res)\n",
         "y_pred.to_csv(\"/content/drive/My Drive/Colab Notebooks/imbalanced_trials/y_pred.csv\")\n",
         "y_proba.to_csv(\"/content/drive/My Drive/Colab Notebooks/imbalanced_trials/y_proba.csv\")\n",
-        "y_test_df.to_csv(\"/content/drive/My Drive/Colab Notebooks/imbalanced_trials/y_test.csv\")"
+        "y_test_df.to_csv(\"/content/drive/My Drive/Colab Notebooks/imbalanced_trials/y_test.csv\")\n",
+        "train_ind_df.to_csv(\"/content/drive/My Drive/Colab Notebooks/imbalanced_trials/train_indices.csv\")\n",
+        "test_ind_df.to_csv(\"/content/drive/My Drive/Colab Notebooks/imbalanced_trials/test_indices.csv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": null,
       "metadata": {
         "id": "JnNvqyKfNE2e",
         "outputId": "510cc8be-fda7-4317-89b0-f92f6978ffb8",
